--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Vue SPA</title>
-  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+  <link rel="stylesheet" href="/assets/styles.css">
 </head>
 
 <body>
+
   <div id="app"></div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="/assets/js/app.js"></script>
 </body>
 
